[gd_scene load_steps=5 format=3 uid="uid://ctgdaklc66av2"]

[ext_resource type="Theme" uid="uid://cnlaljp0dvwrt" path="res://resources/title.tres" id="1_7a4sj"]
[ext_resource type="Script" path="res://title.gd" id="1_t22rv"]
[ext_resource type="Theme" uid="uid://dylr3kfip6eyw" path="res://resources/game_ui.tres" id="2_qwuuv"]
[ext_resource type="TileSet" uid="uid://dr2g3t6qf7eiu" path="res://resources/tileset.tres" id="4_dmvqi"]

[node name="start" type="CanvasLayer"]
layer = 10
script = ExtResource("1_t22rv")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_bottom = 23.0
grow_horizontal = 0
theme = ExtResource("1_7a4sj")
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Emergency Mode"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 100

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="button_start_game" type="Button" parent="MarginContainer2/VFlowContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("2_qwuuv")
text = "Play"

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer3"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
theme = ExtResource("2_qwuuv")
text = "In the near and short-sighted future, all road vehicles are run by AI. Unfortunately, cutbacks mean we've sacked the entire quality control department. As a result, our cars are liable to lock at full throttle. When this happens, Emergency Mode is activated. You must steer clear of any danger during the allotted time. "
scroll_active = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="car_container" type="Node2D" parent="CanvasLayer"]
unique_name_in_owner = true
z_index = -3

[node name="TileMap" type="TileMap" parent="CanvasLayer"]
z_index = -5
tile_set = ExtResource("4_dmvqi")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(-65539, 196608, 1, -3, 196608, 1, 65533, 196608, 1, 131069, 196608, 1, 196605, 196608, 1, 262141, 196608, 1, 327677, 196608, 1, 393213, 196608, 1, 458749, 196608, 1, 524285, 196608, 1, 589821, 196608, 1, 655357, 196608, 1, 720893, 196608, 1, 786429, 196608, 1, 851965, 196608, 1, 917501, 196608, 1, 983037, 196608, 1, -65538, 196608, 1, -2, 196608, 1, 65534, 196608, 1, 131070, 196608, 1, 196606, 196608, 1, 262142, 196608, 1, 327678, 196608, 1, 393214, 196608, 1, 458750, 196608, 1, 524286, 196608, 1, 589822, 196608, 1, 655358, 196608, 1, 720894, 196608, 1, 786430, 196608, 1, 851966, 196608, 1, 917502, 196608, 1, 983038, 196608, 1, -65537, 196608, 1, -1, 196608, 1, 65535, 196608, 1, 131071, 196608, 1, 196607, 196608, 1, 262143, 196608, 1, 327679, 196608, 1, 393215, 196608, 1, 458751, 196608, 1, 524287, 196608, 1, 589823, 196608, 1, 655359, 196608, 1, 720895, 196608, 1, 786431, 196608, 1, 851967, 196608, 1, 917503, 196608, 1, 983039, 196608, 1, -131072, 196608, 1, -65536, 196608, 1, 0, 196608, 1, 65536, 196608, 1, 131072, 196608, 1, 196608, 196608, 1, 262144, 196608, 1, 327680, 196608, 1, 393216, 196608, 1, 458752, 196608, 1, 524288, 196608, 1, 589824, 196608, 1, 655360, 196608, 1, 720896, 196608, 1, 786432, 196608, 1, 851968, 196608, 1, 917504, 196608, 1, -131071, 196608, 1, -65535, 196608, 1, 1, 196608, 1, 65537, 196608, 1, 131073, 196608, 1, 196609, 196608, 1, 262145, 196608, 1, 327681, 196608, 1, 393217, 196608, 1, 458753, 196608, 1, 524289, 196608, 1, 589825, 196608, 1, 655361, 196608, 1, 720897, 196608, 1, 786433, 196608, 1, 851969, 196608, 1, 917505, 196608, 1, -131070, 196608, 1, -65534, 196608, 1, 2, 196608, 1, 65538, 196608, 1, 131074, 196608, 1, 196610, 196608, 1, 262146, 196608, 1, 327682, 196608, 1, 393218, 196608, 1, 458754, 196608, 1, 524290, 196608, 1, 589826, 196608, 1, 655362, 196608, 1, 720898, 196608, 1, 786434, 196608, 1, 851970, 196608, 1, 917506, 196608, 1, -131069, 196608, 1, -65533, 196608, 1, 3, 196608, 1, 65539, 196608, 1, 131075, 196608, 1, 196611, 196608, 1, 262147, 196608, 1, 327683, 196608, 1, 393219, 196608, 1, 458755, 196608, 1, 524291, 196608, 1, 589827, 196608, 1, 655363, 196608, 1, 720899, 196608, 1, 786435, 196608, 1, 851971, 196608, 1, 917507, 196608, 1, -131068, 196608, 1, -65532, 196608, 1, 4, 196608, 1, 65540, 196608, 1, 131076, 196608, 1, 196612, 196608, 1, 262148, 196608, 1, 327684, 196608, 1, 393220, 196608, 1, 458756, 196608, 1, 524292, 196608, 1, 589828, 196608, 1, 655364, 196608, 1, 720900, 196608, 1, 786436, 196608, 1, 851972, 196608, 1, 917508, 196608, 1, -131067, 196608, 1, -65531, 196608, 1, 5, 196608, 1, 65541, 196608, 1, 131077, 196608, 1, 196613, 196608, 1, 262149, 196608, 1, 327685, 196608, 1, 393221, 196608, 1, 458757, 196608, 1, 524293, 196608, 1, 589829, 196608, 1, 655365, 196608, 1, 720901, 196608, 1, 786437, 196608, 1, 851973, 196608, 1, 917509, 196608, 1, -131066, 196608, 1, -65530, 196608, 1, 6, 196608, 1, 65542, 196608, 1, 131078, 196608, 1, 196614, 196608, 1, 262150, 196608, 1, 327686, 196608, 1, 393222, 196608, 1, 458758, 196608, 1, 524294, 196608, 1, 589830, 196608, 1, 655366, 196608, 1, 720902, 196608, 1, 786438, 196608, 1, 851974, 196608, 1, 917510, 196608, 1, -131065, 196608, 1, -65529, 196608, 1, 7, 196608, 1, 65543, 196608, 1, 131079, 196608, 1, 196615, 196608, 1, 262151, 196608, 1, 327687, 196608, 1, 393223, 196608, 1, 458759, 196608, 1, 524295, 196608, 1, 589831, 196608, 1, 655367, 196608, 1, 720903, 196608, 1, 786439, 196608, 1, 851975, 196608, 1, 917511, 196608, 1, -131064, 196608, 1, -65528, 196608, 1, 8, 196608, 1, 65544, 196608, 1, 131080, 196608, 1, 196616, 196608, 1, 262152, 196608, 1, 327688, 196608, 1, 393224, 196608, 1, 458760, 196608, 1, 524296, 196608, 1, 589832, 196608, 1, 655368, 196608, 1, 720904, 196608, 1, 786440, 196608, 1, 851976, 196608, 1, 917512, 196608, 1, -131063, 196608, 1, -65527, 196608, 1, 9, 196608, 1, 65545, 196608, 1, 131081, 196608, 1, 196617, 196608, 1, 262153, 196608, 1, 327689, 196608, 1, 393225, 196608, 1, 458761, 196608, 1, 524297, 196608, 1, 589833, 196608, 1, 655369, 196608, 1, 720905, 196608, 1, 786441, 196608, 1, 851977, 196608, 1, 917513, 196608, 1, -131062, 196608, 1, -65526, 196608, 1, 10, 196608, 1, 65546, 196608, 1, 131082, 196608, 1, 196618, 196608, 1, 262154, 196608, 1, 327690, 196608, 1, 393226, 196608, 1, 458762, 196608, 1, 524298, 196608, 1, 589834, 196608, 1, 655370, 196608, 1, 720906, 196608, 1, 786442, 196608, 1, 851978, 196608, 1, 917514, 196608, 1, -131061, 196608, 1, -65525, 196608, 1, 11, 196608, 1, 65547, 196608, 1, 131083, 196608, 1, 196619, 196608, 1, 262155, 196608, 1, 327691, 196608, 1, 393227, 196608, 1, 458763, 196608, 1, 524299, 196608, 1, 589835, 196608, 1, 655371, 196608, 1, 720907, 196608, 1, 786443, 196608, 1, 851979, 196608, 1, 917515, 196608, 1, -131060, 196608, 1, -65524, 196608, 1, 12, 196608, 1, 65548, 196608, 1, 131084, 196608, 1, 196620, 196608, 1, 262156, 196608, 1, 327692, 196608, 1, 393228, 196608, 1, 458764, 196608, 1, 524300, 196608, 1, 589836, 196608, 1, 655372, 196608, 1, 720908, 196608, 1, 786444, 196608, 1, 851980, 196608, 1, 917516, 196608, 1, -131059, 196608, 1, -65523, 196608, 1, 13, 196608, 1, 65549, 196608, 1, 131085, 196608, 1, 196621, 196608, 1, 262157, 196608, 1, 327693, 196608, 1, 393229, 196608, 1, 458765, 196608, 1, 524301, 196608, 1, 589837, 196608, 1, 655373, 196608, 1, 720909, 196608, 1, 786445, 196608, 1, 851981, 196608, 1, 917517, 196608, 1, -131058, 196608, 1, -65522, 196608, 1, 14, 196608, 1, 65550, 196608, 1, 131086, 196608, 1, 196622, 196608, 1, 262158, 196608, 1, 327694, 196608, 1, 393230, 196608, 1, 458766, 196608, 1, 524302, 196608, 1, 589838, 196608, 1, 655374, 196608, 1, 720910, 196608, 1, 786446, 196608, 1, 851982, 196608, 1, 917518, 196608, 1, -131057, 196608, 1, -65521, 196608, 1, 15, 196608, 1, 65551, 196608, 1, 131087, 196608, 1, 196623, 196608, 1, 262159, 196608, 1, 327695, 196608, 1, 393231, 196608, 1, 458767, 196608, 1, 524303, 196608, 1, 589839, 196608, 1, 655375, 196608, 1, 720911, 196608, 1, 786447, 196608, 1, 851983, 196608, 1, 917519, 196608, 1, -131056, 196608, 1, -65520, 196608, 1, 16, 196608, 1, 65552, 196608, 1, 131088, 196608, 1, 196624, 196608, 1, 262160, 196608, 1, 327696, 196608, 1, 393232, 196608, 1, 458768, 196608, 1, 524304, 196608, 1, 589840, 196608, 1, 655376, 196608, 1, 720912, 196608, 1, 786448, 196608, 1, 851984, 196608, 1, 917520, 196608, 1, -131055, 196608, 1, -65519, 196608, 1, 17, 196608, 1, 65553, 196608, 1, 131089, 196608, 1, 196625, 196608, 1, 262161, 196608, 1, 327697, 196608, 1, 393233, 196608, 1, 458769, 196608, 1, 524305, 196608, 1, 589841, 196608, 1, 655377, 196608, 1, 720913, 196608, 1, 786449, 196608, 1, 851985, 196608, 1, 917521, 196608, 1, -131054, 196608, 1, -65518, 196608, 1, 18, 196608, 1, 65554, 196608, 1, 131090, 196608, 1, 196626, 196608, 1, 262162, 196608, 1, 327698, 196608, 1, 393234, 196608, 1, 458770, 196608, 1, 524306, 196608, 1, 589842, 196608, 1, 655378, 196608, 1, 720914, 196608, 1, 786450, 196608, 1, 851986, 196608, 1, 917522, 196608, 1, -131053, 196608, 1, -65517, 196608, 1, 19, 196608, 1, 65555, 196608, 1, 131091, 196608, 1, 196627, 196608, 1, 262163, 196608, 1, 327699, 196608, 1, 393235, 196608, 1, 458771, 196608, 1, 524307, 196608, 1, 589843, 196608, 1, 655379, 196608, 1, 720915, 196608, 1, 786451, 196608, 1, 851987, 196608, 1, 917523, 196608, 1, -131052, 196608, 1, -65516, 196608, 1, 20, 196608, 1, 65556, 196608, 1, 131092, 196608, 1, 196628, 196608, 1, 262164, 196608, 1, 327700, 196608, 1, 393236, 196608, 1, 458772, 196608, 1, 524308, 196608, 1, 589844, 196608, 1, 655380, 196608, 1, 720916, 196608, 1, 786452, 196608, 1, 851988, 196608, 1, 917524, 196608, 1, -131051, 196608, 1, -65515, 196608, 1, 21, 196608, 1, 65557, 196608, 1, 131093, 196608, 1, 196629, 196608, 1, 262165, 196608, 1, 327701, 196608, 1, 393237, 196608, 1, 458773, 196608, 1, 524309, 196608, 1, 589845, 196608, 1, 655381, 196608, 1, 720917, 196608, 1, 786453, 196608, 1, 851989, 196608, 1, 917525, 196608, 1, -131050, 196608, 1, -65514, 196608, 1, 22, 196608, 1, 65558, 196608, 1, 131094, 196608, 1, 196630, 196608, 1, 262166, 196608, 1, 327702, 196608, 1, 393238, 196608, 1, 458774, 196608, 1, 524310, 196608, 1, 589846, 196608, 1, 655382, 196608, 1, 720918, 196608, 1, 786454, 196608, 1, 851990, 196608, 1, 917526, 196608, 1, -131049, 196608, 1, -65513, 196608, 1, 23, 196608, 1, 65559, 196608, 1, 131095, 196608, 1, 196631, 196608, 1, 262167, 196608, 1, 327703, 196608, 1, 393239, 196608, 1, 458775, 196608, 1, 524311, 196608, 1, 589847, 196608, 1, 655383, 196608, 1, 720919, 196608, 1, 786455, 196608, 1, 851991, 196608, 1, 917527, 196608, 1, 131067, 196608, 1, 131068, 196608, 1, -65541, 196608, 1, -5, 196608, 1, 65531, 196608, 1, 196603, 196608, 1, 262139, 196608, 1, 327675, 196608, 1, 393211, 196608, 1, 458747, 196608, 1, 524283, 196608, 1, 589819, 196608, 1, 655355, 196608, 1, 720891, 196608, 1, -65540, 196608, 1, -4, 196608, 1, 65532, 196608, 1, 196604, 196608, 1, 262140, 196608, 1, 327676, 196608, 1, 393212, 196608, 1, 458748, 196608, 1, 524284, 196608, 1, 589820, 196608, 1, 655356, 196608, 1, 720892, 196608, 1, 786427, 196608, 1, 851963, 196608, 1, 917499, 196608, 1, 983035, 196608, 1, 786428, 196608, 1, 851964, 196608, 1, 917500, 196608, 1, 983036, 196608, 1)
layer_1/name = "road"
layer_1/tile_data = PackedInt32Array(196603, 393216, 2, 262139, 393216, 2, 327675, 0, 3, 196604, 393216, 2, 262140, 393216, 2, 327676, 0, 3, 196605, 393216, 2, 262141, 393216, 2, 327677, 0, 3, 196606, 393216, 2, 262142, 393216, 2, 327678, 0, 3, 196607, 393216, 2, 262143, 393216, 2, 327679, 0, 3, 131072, 393216, 2, 196608, 393216, 2, 262144, 0, 3, 131073, 393216, 2, 196609, 393216, 2, 262145, 0, 3, 131074, 393216, 2, 196610, 393216, 2, 262146, 0, 3, 131075, 393216, 2, 196611, 393216, 2, 262147, 0, 3, 131076, 393216, 2, 196612, 393216, 2, 262148, 0, 3, 131077, 393216, 2, 196613, 393216, 2, 262149, 0, 3, 131078, 393216, 2, 196614, 393216, 2, 262150, 0, 3, 131079, 393216, 2, 196615, 393216, 2, 262151, 0, 3, 131080, 393216, 2, 196616, 393216, 2, 262152, 0, 3, 131081, 393216, 2, 196617, 393216, 2, 262153, 0, 3, 131082, 393216, 2, 196618, 393216, 2, 262154, 0, 3, 131083, 393216, 2, 196619, 393216, 2, 262155, 0, 3, 131084, 393216, 2, 196620, 393216, 2, 262156, 0, 3, 131085, 393216, 2, 196621, 393216, 2, 262157, 0, 3, 131086, 393216, 2, 196622, 393216, 2, 262158, 0, 3, 131087, 393216, 2, 196623, 393216, 2, 262159, 0, 3, 131088, 393216, 2, 196624, 393216, 2, 262160, 0, 3, 131089, 393216, 2, 196625, 393216, 2, 262161, 0, 3, 131090, 393216, 2, 196626, 393216, 2, 262162, 0, 3, 131091, 393216, 2, 196627, 393216, 2, 262163, 0, 3, 131092, 393216, 2, 196628, 393216, 2, 262164, 0, 3, 131093, 393216, 2, 196629, 393216, 2, 262165, 0, 3, 131094, 393216, 2, 196630, 393216, 2, 262166, 0, 3, 131095, 393216, 2, 196631, 393216, 2, 262167, 0, 3, 131069, 458752, 2, 131070, 458752, 2, 131071, 458752, 2, 65536, 458752, 2, 65537, 458752, 2, 65538, 458752, 2, 65539, 458752, 2, 65540, 458752, 2, 65541, 458752, 2, 65542, 458752, 2, 65543, 458752, 2, 65544, 458752, 2, 65545, 458752, 2, 65546, 458752, 2, 65547, 458752, 2, 65548, 458752, 2, 65549, 458752, 2, 65550, 458752, 2, 65551, 458752, 2, 65552, 458752, 2, 65553, 458752, 2, 65554, 458752, 2, 65555, 458752, 2, 65556, 458752, 2, 65557, 458752, 2, 65558, 458752, 2, 65559, 458752, 2, 131067, 458752, 2, 131068, 458752, 2, 589819, 458752, 2, 655355, 393216, 2, 589820, 458752, 2, 655356, 393216, 2, 589821, 458752, 2, 655357, 393216, 2, 589822, 458752, 2, 655358, 393216, 2, 589823, 458752, 2, 655359, 393216, 2, 524288, 458752, 2, 589824, 393216, 2, 524289, 458752, 2, 589825, 393216, 2, 524290, 458752, 2, 589826, 393216, 2, 524291, 458752, 2, 589827, 393216, 2, 524292, 458752, 2, 589828, 393216, 2, 524293, 458752, 2, 589829, 393216, 2, 524294, 458752, 2, 589830, 393216, 2, 524295, 458752, 2, 589831, 393216, 2, 524296, 458752, 2, 589832, 393216, 2, 524297, 458752, 2, 589833, 393216, 2, 524298, 458752, 2, 589834, 393216, 2, 524299, 458752, 2, 589835, 393216, 2, 524300, 458752, 2, 589836, 393216, 2, 524301, 458752, 2, 589837, 393216, 2, 524302, 458752, 2, 589838, 393216, 2, 524303, 458752, 2, 589839, 393216, 2, 524304, 458752, 2, 589840, 393216, 2, 524305, 458752, 2, 589841, 393216, 2, 524306, 458752, 2, 589842, 393216, 2, 524307, 458752, 2, 589843, 393216, 2, 524308, 458752, 2, 589844, 393216, 2, 524309, 458752, 2, 589845, 393216, 2, 524310, 458752, 2, 589846, 393216, 2, 524311, 458752, 2, 589847, 393216, 2, 720891, 393216, 2, 786427, 0, 3, 720892, 393216, 2, 786428, 0, 3, 720893, 393216, 2, 786429, 0, 3, 720894, 393216, 2, 786430, 0, 3, 720895, 393216, 2, 786431, 0, 3, 655360, 393216, 2, 720896, 0, 3, 655361, 393216, 2, 720897, 0, 3, 655362, 393216, 2, 720898, 0, 3, 655363, 393216, 2, 720899, 0, 3, 655364, 393216, 2, 720900, 0, 3, 655365, 393216, 2, 720901, 0, 3, 655366, 393216, 2, 720902, 0, 3, 655367, 393216, 2, 720903, 0, 3, 655368, 393216, 2, 720904, 0, 3, 655369, 393216, 2, 720905, 0, 3, 655370, 393216, 2, 720906, 0, 3, 655371, 393216, 2, 720907, 0, 3, 655372, 393216, 2, 720908, 0, 3, 655373, 393216, 2, 720909, 0, 3, 655374, 393216, 2, 720910, 0, 3, 655375, 393216, 2, 720911, 0, 3, 655376, 393216, 2, 720912, 0, 3, 655377, 393216, 2, 720913, 0, 3, 655378, 393216, 2, 720914, 0, 3, 655379, 393216, 2, 720915, 0, 3, 655380, 393216, 2, 720916, 0, 3, 655381, 393216, 2, 720917, 0, 3, 655382, 393216, 2, 720918, 0, 3, 655383, 393216, 2, 720919, 0, 3, 458748, 131072, 2, 393216, 131072, 2, 393220, 131072, 2, 393224, 131072, 2, 393228, 131072, 2, 393232, 131072, 2, 393236, 131072, 2, 393239, 131072, 2)

[connection signal="pressed" from="MarginContainer2/VFlowContainer/button_start_game" to="." method="_on_button_start_game_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
